--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,12 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://esri.bintray.com/arcgis'
+        }
     }
+
+
 }
 
 task clean(type: Delete) {
